--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.3.0",
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^4.0.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^2.6.5",
+    "astro": "^2.6.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "react": "^18.0.0",
